chore(css/style): fix z-index
To google maps don't be fixed over the header

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ label {
 
   position: sticky;
   top: 0;
+  z-index: 999;
 }
 
 .header-content {
@@ -260,6 +261,7 @@ label {
 /* MEDIA QUERIES ------------------------------------------------------ */
 .map iframe {
   display: none;
+  z-index: 0;
 }
 
 @media (min-width: 740px) {
